# data-color-analyzer

./: README.md  data-color-analyzer.py  pyproject.toml
_old/: chart-color-calculator.py
data_color_analyzer/: __init__.py
data_color_analyzer/color_generator/: README.md  __init__.py  color_generator.py
data_color_analyzer/color_pipeline/: __init__.py  color_pipeline.py
data_color_analyzer/color_pipeline/color_blindness/: __init__.py  schmitz_2015.py  vienot_1999.py
data_color_analyzer/color_pipeline/perceived_diff/: __init__.py  ciede2000.py
data_color_analyzer/colortools/: __init__.py  colorconvert.py
data_color_analyzer/viewtools/: scrollframe.py  ui_sections.py
old/: chart-color-calculator.py
subpackage/: __init__.py  module.py
