[tool.poetry]
name = "data_color_analyzer"
version = "0.1.0"
description = ""
authors = ["Finnfox66 <36104337+Finnfox66@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
gui = "data_color_analyzer:main"
generate = "data_color_analyzer:generate"

[tool.poetry.dependencies]
numpy = "2.1.1"
python = "^3.10"
pyciede2000 = "0.0.21"
ttkthemes = "^3.2.2"
scikit-image = "0.24.0"
wcag-contrast-ratio = "0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
